--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <div class="col-lg-6 mt-4">
                     <div class="card servicesText">
                         <div class="card-body">
-                            <h4 class="card-title mt-3" style="font-size: 2rem;">Comprehansive Legal services</h4>
+                            <h4 class="card-title mt-3" style="font-size: 2rem;">Comprehensive Legal services</h4>
                             <p class="card-text mt-3" style="font-size: larger;">I offer comprehensive legal services, including contractual agreement drafting and negotiation, to assist clients with a wide range of legal needs.</p>
                         </div>
                     </div>  
@@ -137,7 +137,7 @@
                 <div class="card weContent">
                     <div class="card-body">
                         <h4 class="card-title mt-3" style="font-size: 2rem;">Graduate Intern</h4>
-                        <p class="card-text mt-4" style="font-size: larger;">Boff & Company Insurance Brokers Limited - (January - December 2023).</p>
+                        <p class="card-text mt-4" style="font-size: larger;">Boff & Company Insurance Brokers Limited - (February - October 2023).</p>
                     </div>
                 </div>
             </div>
@@ -250,7 +250,7 @@
                 <div class="card othersText">
                     <div class="card-body">
                         <h4 class="card-title mt-3" style="font-size: 2rem;">Projects</h4>
-                        <p class="card-text mt-3" style="font-size: larger;">Ghost writing for medical blog.</p>
+                        <p class="card-text mt-3" style="font-size: larger;">Ghost writing for Greater Heights Clinic's blog.</p>
                     </div>
                 </div>  
             </div>
